--- a/equipededeveloppement.html
+++ b/equipededeveloppement.html
@@ -24,11 +24,11 @@
                 <span class="closebtn" onclick="closeSearch()" title="Close Overlay">x</span>
                 <div class="overlay-content">
                     <form action="action_page.php">
-                        <input id="searchInputBar" type="text" placeholder="Search.." name="search">
+                        <input id="searchInputBar" autocomplete="off" type="text" placeholder="Search.." name="search">
                         <button type="submit"><i class="fa fa-search"></i></button>
                     </form>
                 </div>
-                <div id="divh"><p id="h"></p></div>
+                <div id="searchResult"></div>
             </div>
             <!-- FIN -->
             <div class="container">
@@ -261,6 +261,8 @@
     <script src="js/formulaire.js"></script>
     <!-- Mon script -->
     <script src="js/main.js"></script>
+    <!-- Search Bar -->
+    <script src="js/search.js"></script>
 
 </body>
 
