--- a/formulaire.html
+++ b/formulaire.html
@@ -24,10 +24,11 @@
             <span class="closebtn" onclick="closeSearch()" title="Close Overlay">x</span>
             <div class="overlay-content">
                 <form action="action_page.php">
-                    <input type="text" placeholder="Search.." name="search">
+                    <input type="text" autocomplete="off" placeholder="Search.." name="search">
                     <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
             </div>
+            <div id="searchResult"></div>
         </div>
 
         <div class="container">
@@ -196,6 +197,8 @@
     <script src="js/formulaire.js"></script>
     <!-- Mon script -->
     <script src="js/main.js"></script>
+    <!-- Search Bar -->
+    <script src="js/search.js"></script>
 
 </body>
 
