--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 
@@ -24,11 +25,11 @@
                 <span class="closebtn" onclick="closeSearch()" title="Close Overlay">x</span>
                 <div class="overlay-content">
                     <form action="action_page.php">
-                        <input id="searchInputBar" type="text" placeholder="Search.." name="search">
+                        <input id="searchInputBar" autocomplete="off" type="text" placeholder="Search.." name="search">
                         <button type="submit"><i class="fa fa-search"></i></button>
                     </form>
                 </div>
-                <div id="divh"><p id="h"></p></div>
+                <div id="searchResult"></div>
             </div>
             <!-- FIN -->
             <div class="container">
@@ -237,7 +238,7 @@
 
                 <div class="container coups-coeur-box">
 
-                    <p>Coups de coeur</p>
+                    <h2>Coups de coeur</h2>
 
 
                     <article class="border-box1">
@@ -299,7 +300,7 @@
             <section class="text-center films-venir " id="prochainement">
                 <div class="container">
 
-                    <p>Films à venir</p>
+                    <h2>Films à venir</h2>
 
                     <!-- Div pour le contenue Film à venir -->
                     <div class="nextlist row justify-content-center">
@@ -391,5 +392,6 @@
     <script src="js/search.js"></script>
 
 </body>
+
 
 </html>
